--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^4.5.0",
     "@types/uglify-js": "^3.17.1",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
